2008-01-22	Guido Diepen	<guido@guidodiepen.nl>

	* Converted the directory structure for easy packaging
	* Created setup.py for distutils

2008-01-20	Guido Diepen	<guido@guidodiepen.nl>

	* Rewrote code to make use of locking for access to librapi2
	* Added window to show progress of CAB file copying (This needs
	  latest SVN librapi, for non-blocking CeWriteFile)

2008-01-19	Guido Diepen	<guido@guidodiepen.nl>

	* Some minor bugfixes in code
	* Some minor changes in GUI desgin
	* Added support for displaying partnerships 
	* Added support for removing partnerships
	* Added support for creating partnerships


2008-01-08	Guido Diepen	<guido@guidodiepen.nl>

	* Minor bugfix, add quotes around path and files to 
	  cope with spaces within them

2008-01-08	Guido Diepen	<guido@guidodiepen.nl>

	* Implemented Minimize-to-tray. Application must be quit
	  through Quit button, not through closing window
	* Implemented About dialog
	* Implemented handling of locked WM5 devices
	* Implemented handling of locked WM6 devices
	* Implemented more information on sysinfo screen
	* Did a bit of code-cleanup (more of this is needed)

2008-01-03	Guido Diepen	<guido@guidodiepen.nl>

	* Implemented a Periodic Timer, that will keep updating the
	  PhoneCommunicator object and notify any observers in case
	  something gets updated in the model
	* Implemented customEvent for updating the GUI outside of the
	  GUI thread.
	* Implemented initial progress report on copying CAB file to
	  device (console based for now)

2007-12-30	Guido Diepen	<guido@guidodiepen.nl>

	* Implemented use of tray icon. Currently only showing connection
	  status by means of the icon color. Will be minimize-to-tray
	* Implemented message balloons indicating connection status change
	* Implemented the possibility of installing CAB files through 
	  the application
	* Important note is that almost none to none checking is done!!
	  This program is still in heavy development
	* Added some new items to TODO
