@@ -1,3 +1,7 @@
+2008-01-23	Guido Diepen	<guido@guidodiepen.nl>
+
+	* Working setup.py, no more problems with icons
+
 2008-01-22	Guido Diepen	<guido@guidodiepen.nl>
 
 	* Converted the directory structure for easy packaging
